# Ignix

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ccpp vulkan.yml  ccpp.yml
docs/: formats.md
include/gui/: gui.hpp  struct_inspector.hpp  ui_value.hpp  ui_window.hpp  window.hpp  window_container.hpp
include/helpers/: common.hpp  factory.hpp  graphics_object_ref.hpp  render_task.hpp  scene_graph.hpp
include/types/: scene_object_types.hpp
include/utils/: inflect.hpp
res/shaders/: compile.bat  compile.sh  gui.frag  gui.frag.spv  gui.vert  gui.vert.spv  pass_through.frag  pass_through.frag.spv  pass_through.vert  pass_through.vert.spv  test.comp  test.comp.spv  test.frag  test.frag.spv  test.vert  test.vert.spv
res/test_shaders/: test.comp.spv  test.frag  test.frag.spv  test.vert.spv
src/gui/: gui.cpp  ui_window.cpp  window.cpp  window_container.cpp
src/helpers/: render_task.cpp  scene_graph.cpp
test/: nuklear.cpp  test.cpp
